# Prac-Website-using-Django-and-Replit

./: .replit  LICENSE  README.md  app.py  pyproject.toml
templates/: home.html
